# fire_in_the_term

./: Cargo.toml  README.md  flake.nix
src/: main.rs
